fix(book): force row wrap by inducing 100% width to flex item

--- a/src/assets/styles/book.scss
+++ b/src/assets/styles/book.scss
@@ -17,6 +17,7 @@
   }
 
   .image-container {
+    flex: 100%;
     text-align: center;
     img {
       max-width: 100%;
@@ -27,7 +28,7 @@
   }
 
   .actions-container {
-    flex: 1;
+    flex: 100%;
     margin-top: 10px;
   }
 
